<resources>
    <string name="app_name">Spa &amp; Beauty</string>
    <string name="get_json">GET JSON</string>
    <string name="parse_json">В Магазин</string>
    <string name="txt_data">JSON APPEAR HEAR</string>
    <string name="textAnons">Anons Json</string>
    <string name="txt_title">Title</string>
    <string name="image_desc">image_desc</string>
    <string name="text_price"></string>
    <string name="text_stock"></string>
    <string name="text_content">Content</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="comhelps">ComHelps</string>
    <string name="alexprost46_yahoo_com">alexprost46@yahoo.com</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="name">Личный кабинет</string>
    <string name="ic_chat">Корзина</string>
    <string name="шс_ьуыыфпу">Сообщения</string>
    <string name="ic_share">Поделиться</string>
    <string name="ic_send">Отправить</string>
    <string name="communicate">Communicate</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="imgContent">Фото</string>
    <string name="tab1">Кнопка на первой вкладке</string>
    <string name="tab2">Кнопка на второй вкладке</string>
    <string name="tab3">Кнопка на третьей вкладке</string>
    <string name="text_title">Наименование</string>
    <string name="text_instock">В Наличии</string>
    <string name="text_cont_price">Цена</string>
    <string name="text_cont_stock">В наличии</string>
    <string name="buy">Buy</string>
    <string name="str_shop">Магазин</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_activity">Login Activity</string>
    <string name="et_uname">Имя пользователя</string>
    <string name="et_upass">Пароль</string>
    <string name="btn_login">Вход</string>
    <string name="self_room">Вход в личный кабинет</string>
    <string name="e_mail">Ваш E-mail</string>
    <string name="id">ID</string>
    <string name="link_reg">Нет аккаунта? Зарегистрироваться.</string>
    <string name="enter_name">Введите Имя</string>
    <string name="en_e_mail">Введите E-mail</string>
    <string name="en_pass">Введите Пароль</string>
    <string name="en_cpass">Повторите пароль</string>
    <string name="en_btn_register">Регистрация</string>
    <string name="nav_logout">Выход</string>
    <string name="send">Send</string>
    <string name="textview">TextView</string>
    <string name="quantity">Quantity</string>
    <string name="status"></string>

    <string name="Price">Цена</string>
    <string name="Sum">Сумма</string>
    <string name="title_good">Title Good</string>
    <string name="price">Цена</string>
    <string name="cart_hint">Цена</string>
    <string name="cart_qty">Кол-во</string>
    <string name="qty">Кол-во</string>
    <string name="_1">1</string>
    <string name="text">Text</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hell_alex">Hell Alex!</string>
    <string name="Qty">Кол-во</string>
    <string name="ed_qty">Кол-во</string>
    <string name="txt_qty">Кол-во</string>
    <string name="txt_sum">Сумма</string>
    <string name="empty"/>
    <string name="delete_all_items">Delete All Items</string>
    <string name="txtProd">Products Activity</string>
    <string name="edit">Edit</string>
    <string name="add_product">Add Product</string>
    <string name="delete_products">Delete Products</string>

    <string name="image">Image</string>
    <string name="product_price">Product Price</string>

    <string name="summa">Summa</string>
    <string name="result">Result</string>
    <string name="todo">TODO</string>
    <string name="desc">desc</string>
    <string name="quantity1">Кол-во</string>
    <string name="name_prod">Наименование</string>
    <string name="price_prod">Цена</string>
    <string name="val_prod"></string>
    <string name="sum_prod">Сумма</string>
    <string name="prod_empty"></string>
    <string name="deleteall">Удалить всё</string>
    <string name="Pay_order">Оплатить</string>
    <string name="send_to_server">Send to Server</string>
    <string name="id_user">Id_User</string>
    <string name="logged_name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>


</resources>
