<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_message"
                android:icon="@drawable/ic_message"
                android:title="@string/шс_ьуыыфпу"/>
        <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_cart"
                android:title="@string/ic_chat"/>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/name"/>
        <item
                android:id="@+id/nav_shop"
                android:icon="@drawable/ic_shopping_basket_menu"
                android:title="@string/str_shop"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_forward_black_24dp"
                android:title="@string/nav_logout"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/ic_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/ic_send"/>
        </menu>
    </item>

</menu>
