<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">
        <ImageView
                android:id="@+id/view_img"
                android:layout_width="80dp"
                android:layout_height="100dp"/>
        <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/_1"
                android:maxLines="1"
                android:padding="5dp"
                android:id="@+id/view_qty"
                android:textSize="16sp"
                android:textColor="#3d3d3d"
                android:layout_alignParentRight="true"/>

        <TextView
                android:id="@+id/view_title"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/view_qty"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/view_qty"
                android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp"/>

        <TextView
                android:id="@+id/view_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:text="@string/Price"
                android:layout_alignStart="@+id/view_title"
                android:layout_centerVertical="true" android:layout_alignLeft="@+id/view_title"/>

        <TextView
                android:id="@+id/price_val"
                android:padding="5dp"
                android:text="@string/Price"
                android:textSize="16sp"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:textColor="#3d3d3d"
                android:layout_width="90dp"
                android:layout_alignEnd="@+id/view_qty"
                android:layout_centerVertical="true"
                android:layout_alignRight="@+id/view_qty"/>

        <TextView
                android:id="@+id/txt_sum"
                android:text="@string/txt_sum"
                android:padding="5dp"
                android:layout_width="82dp"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:layout_height="30dp"
                android:layout_below="@+id/view_img" android:layout_alignStart="@+id/view_title"
                android:layout_alignLeft="@+id/view_title"/>
        <TextView
                android:id="@+id/sum_val"
                android:text="@string/empty"
                android:layout_width="90dp"
                android:padding="3dp"
                android:gravity="end"
                android:textSize="17sp"
                android:textColor="#3d3d3d"
                android:layout_height="27dp"
                android:layout_below="@+id/view_img" android:layout_alignEnd="@+id/view_qty"
                android:layout_alignRight="@+id/view_qty"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>
