<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/relativeLayout"
        android:gravity="center">

    <ImageView
            android:id="@+id/img_resp"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:cropToPadding="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/image_desc"
            android:layout_marginStart="10dp"/>
    <LinearLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:minHeight="35dp"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/txt_resp_name"
                  tools:text="@string/txt_title"
                  android:textSize="14sp"
                  android:fontFamily="sans-serif"
                  android:textColor="@android:color/holo_purple"
                  android:textAllCaps="true"
                  android:gravity="center_vertical|center_horizontal"
                  android:textStyle="bold"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal|center">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="30dp">
            <TextView
                    android:text="@string/status"
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/txt_resp_status"
                    android:textSize="14sp"
                    android:paddingLeft="5dp"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="false"
                    android:gravity="left|center_vertical"
                    android:paddingStart="5dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>
                <TextView
                        android:text="@string/Qty"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:id="@+id/txt_resp_qty"
                        android:textSize="14sp"
                        android:paddingRight="5dp"
                        android:fontFamily="sans-serif"
                        android:textAllCaps="false"
                        android:gravity="right|center_vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        tools:ignore="RtlHardcoded,RtlSymmetry"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="30dp">
                <TextView
                        android:text="@string/Price"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:id="@+id/txt_resp_price"
                        android:textSize="14sp"
                        android:textColor="@color/colorAccent"
                        android:layout_marginLeft="5dp"
                        android:paddingLeft="5dp"
                        android:fontFamily="sans-serif"
                        android:gravity="left|center_vertical"
                        android:paddingStart="5dp"
                        tools:ignore="RtlHardcoded,RtlSymmetry"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"/>
                <TextView
                        android:text="@string/Sum"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:id="@+id/txt_resp_sum"
                        android:textSize="14sp"
                        android:textColor="@color/colorAccent"
                        android:paddingRight="5dp"
                        android:fontFamily="sans-serif"
                        android:textAllCaps="false"
                        android:gravity="right|center_vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        tools:ignore="RtlHardcoded,RtlSymmetry"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>